Migration from AxonServer 4. Undone previous changes in events file format (index stored in transaction) as this is no longer needed. Fixed minor issue in JpaRaftStateController, state was updated after save but could have already changed again. Causing entries to be applied twice. Fixed minor issue in LeaderState applied operation to remove unnecessary delay.